--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.6",
+    "@angular/cdk": "^17.0.3",
     "@angular/common": "^17.0.6",
     "@angular/compiler": "^17.0.6",
     "@angular/core": "^17.0.6",
@@ -18,22 +19,23 @@
     "@angular/platform-browser": "^17.0.6",
     "@angular/platform-browser-dynamic": "^17.0.6",
     "@angular/router": "^17.0.6",
-    "bootstrap": "^5.3.2",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.2",
-    "@ngrx/store-devtools": "^17.0.1",
-    "@ngrx/store": "^17.0.1",
-    "@ngrx/effects": "^17.0.1",
     "@ngrx/data": "^17.0.1",
+    "@ngrx/effects": "^17.0.1",
     "@ngrx/entity": "^17.0.1",
     "@ngrx/router-store": "^17.0.1",
-    "primeng": "^17.0.0",
-    "primeicons":"^6.0.1",
-    "primeflex": "^3.3.1",
+    "@ngrx/store": "^17.0.1",
+    "@ngrx/store-devtools": "^17.0.1",
+    "bootstrap": "^5.3.2",
     "chart.js": "3.3.2",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primeng": "^17.0.0",
     "quill": "^1.3.7",
-    "@angular/cdk": "^17.0.3"
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.6",
