--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular/cli": "^17.0.6",
     "@angular/compiler-cli": "^17.0.6",
     "@types/jasmine": "~5.1.0",
+    "@types/lodash": "^4.14.202",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
