--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngrx/effects": "^17.0.1",
     "@ngrx/entity": "^17.0.1",
     "@ngrx/router-store": "^17.0.1",
+    "@ngrx/signals": "^17.0.1",
     "@ngrx/store": "^17.0.1",
     "@ngrx/store-devtools": "^17.0.1",
     "bootstrap": "^5.3.2",
