--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
               "src/styles.css"
             ],
             "scripts": [
-            ]
+            ],
+            "server": "src/main.server.ts"
           },
           "configurations": {
             "production": {
