--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/forms": "^17.0.6",
     "@angular/platform-browser": "^17.0.6",
     "@angular/platform-browser-dynamic": "^17.0.6",
+    "@angular/platform-server": "^17.0.6",
     "@angular/router": "^17.0.6",
+    "@angular/ssr": "^17.0.6",
     "@ngrx/data": "^17.0.1",
     "@ngrx/effects": "^17.0.1",
     "@ngrx/entity": "^17.0.1",
@@ -44,6 +46,7 @@
     "@angular/compiler-cli": "^17.0.6",
     "@types/jasmine": "~5.1.0",
     "@types/lodash": "^4.14.202",
+    "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
