--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,11 @@
             ],
             "scripts": [
             ],
-            "server": "src/main.server.ts"
+            "server": "src/main.server.ts",
+            "prerender": true,
+            "ssr": {
+              "entry": "server.ts"
+            }
           },
           "configurations": {
             "production": {
