--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,13 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/quill/dist/quill.core.css",
+              "node_modules/quill/dist/quill.snow.css",
               "src/styles.css"
             ],
             "scripts": [
+              "node_modules/quill/dist/quill.min.js",
+              "node_modules/chart.js/dist/chart.min.js"
             ],
             "server": "src/main.server.ts",
             "prerender": true,
