--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.6",
-    "@angular/cdk": "^17.0.3",
-    "@angular/common": "^17.0.6",
-    "@angular/compiler": "^17.0.6",
-    "@angular/core": "^17.0.6",
-    "@angular/forms": "^17.0.6",
-    "@angular/platform-browser": "^17.0.6",
-    "@angular/platform-browser-dynamic": "^17.0.6",
-    "@angular/platform-server": "^17.0.6",
-    "@angular/router": "^17.0.6",
-    "@angular/ssr": "^17.0.6",
+    "@angular/animations": "^17.2.0",
+    "@angular/cdk": "^17.1.2",
+    "@angular/common": "^17.2.0",
+    "@angular/compiler": "^17.1.4",
+    "@angular/core": "^17.2.0",
+    "@angular/forms": "^17.2.0",
+    "@angular/platform-browser": "^17.2.0",
+    "@angular/platform-browser-dynamic": "^17.2.0",
+    "@angular/platform-server": "^17.2.0",
+    "@angular/router": "^17.2.0",
+    "@angular/ssr": "^17.1.4",
+    "@ngrx/component-store": "^17.1.0",
     "@ngrx/data": "^17.0.1",
     "@ngrx/effects": "^17.0.1",
     "@ngrx/entity": "^17.0.1",
@@ -34,16 +35,16 @@
     "moment": "^2.29.4",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primeng": "^17.2.0",
+    "primeng": "^17.7.0",
     "quill": "^1.3.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.6",
-    "@angular/cli": "^17.0.6",
-    "@angular/compiler-cli": "^17.0.6",
+    "@angular-devkit/build-angular": "^17.1.4",
+    "@angular/cli": "^17.1.4",
+    "@angular/compiler-cli": "^17.2.0",
     "@types/jasmine": "~5.1.0",
     "@types/lodash": "^4.14.202",
     "@types/node": "^18.18.0",
