--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/data": "^17.0.1",
     "@ngrx/effects": "^17.0.1",
     "@ngrx/entity": "^17.0.1",
+    "@ngrx/operators": "^17.1.1",
     "@ngrx/router-store": "^17.0.1",
     "@ngrx/signals": "^17.1.1",
     "@ngrx/store": "^17.0.1",
