--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.4",
-    "@angular/cdk": "^17.3.4",
-    "@angular/common": "^17.3.4",
-    "@angular/compiler": "^17.3.4",
-    "@angular/core": "^17.3.4",
-    "@angular/forms": "^17.3.4",
-    "@angular/platform-browser": "^17.3.4",
-    "@angular/platform-browser-dynamic": "^17.3.4",
-    "@angular/platform-server": "^17.3.4",
-    "@angular/router": "^17.3.4",
-    "@angular/ssr": "^17.3.4",
+    "@angular/animations": "^17.3.9",
+    "@angular/cdk": "^17.3.9",
+    "@angular/common": "^17.3.9",
+    "@angular/compiler": "^17.3.9",
+    "@angular/core": "^17.3.9",
+    "@angular/forms": "^17.3.9",
+    "@angular/platform-browser": "^17.3.9",
+    "@angular/platform-browser-dynamic": "^17.3.9",
+    "@angular/platform-server": "^17.3.9",
+    "@angular/router": "^17.3.9",
+    "@angular/ssr": "^17.3.7",
     "@ngrx/operators": "^17.2.0",
     "@ngrx/signals": "^17.2.0",
     "@ngrx/store-devtools": "^17.0.1",
@@ -28,18 +28,19 @@
     "chart.js": "3.3.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "luxon": "^3.4.4",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primeng": "^17.13.0",
+    "primeng": "^17.17.0",
     "quill": "^1.3.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.4",
-    "@angular/cli": "^17.3.4",
-    "@angular/compiler-cli": "^17.3.4",
+    "@angular-devkit/build-angular": "^17.3.7",
+    "@angular/cli": "^17.3.7",
+    "@angular/compiler-cli": "^17.3.9",
     "@types/jasmine": "~5.1.0",
     "@types/lodash": "^4.14.202",
     "@types/node": "^18.18.0",
