--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.9",
-    "@angular/cdk": "^17.3.9",
-    "@angular/common": "^17.3.9",
-    "@angular/compiler": "^17.3.9",
-    "@angular/core": "^17.3.9",
-    "@angular/forms": "^17.3.9",
-    "@angular/platform-browser": "^17.3.9",
-    "@angular/platform-browser-dynamic": "^17.3.9",
-    "@angular/platform-server": "^17.3.9",
-    "@angular/router": "^17.3.9",
-    "@angular/ssr": "^17.3.7",
+    "@angular/animations": "^18.0.1",
+    "@angular/cdk": "^18.0.1",
+    "@angular/common": "^18.0.1",
+    "@angular/compiler": "^18.0.1",
+    "@angular/core": "^18.0.1",
+    "@angular/forms": "^18.0.1",
+    "@angular/platform-browser": "^18.0.1",
+    "@angular/platform-browser-dynamic": "^18.0.1",
+    "@angular/platform-server": "^18.0.1",
+    "@angular/router": "^18.0.1",
+    "@angular/ssr": "^18.0.2",
     "@ngrx/operators": "^17.2.0",
     "@ngrx/signals": "^17.2.0",
     "@ngrx/store-devtools": "^17.0.1",
@@ -30,17 +30,19 @@
     "moment": "^2.29.4",
     "luxon": "^3.4.4",
     "primeflex": "^3.3.1",
-    "primeicons": "^6.0.1",
-    "primeng": "^17.17.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.0",
     "quill": "^1.3.7",
-    "rxjs": "~7.8.0",
+    "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.14.6",
+    "angular-oidc-client": "^1.0.9",
+    "@microsoft/signalr": "^8.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.7",
-    "@angular/cli": "^17.3.7",
-    "@angular/compiler-cli": "^17.3.9",
+    "@angular-devkit/build-angular": "^18.0.2",
+    "@angular/cli": "^18.0.2",
+    "@angular/compiler-cli": "^18.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/lodash": "^4.14.202",
     "@types/node": "^18.18.0",
@@ -50,6 +52,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.5"
   }
 }
