--- a/angular.json
+++ b/angular.json
@@ -46,7 +46,7 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/quill/dist/quill.min.js",
+              "node_modules/quill/dist/quill.js",
               "node_modules/chart.js/dist/chart.min.js"
             ],
             "server": "src/main.server.ts",
