--- a/package.json
+++ b/package.json
@@ -10,20 +10,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.1",
-    "@angular/cdk": "^18.0.1",
-    "@angular/common": "^18.0.1",
-    "@angular/compiler": "^18.0.1",
-    "@angular/core": "^18.0.1",
-    "@angular/forms": "^18.0.1",
-    "@angular/platform-browser": "^18.0.1",
-    "@angular/platform-browser-dynamic": "^18.0.1",
-    "@angular/platform-server": "^18.0.1",
-    "@angular/router": "^18.0.1",
-    "@angular/ssr": "^18.0.2",
-    "@ngrx/operators": "^17.2.0",
-    "@ngrx/signals": "^17.2.0",
-    "@ngrx/store-devtools": "^17.0.1",
+    "@angular/animations": "^18.1.1",
+    "@angular/cdk": "^18.1.1",
+    "@angular/common": "^18.1.1",
+    "@angular/compiler": "^18.1.1",
+    "@angular/core": "^18.1.1",
+    "@angular/forms": "^18.1.1",
+    "@angular/platform-browser": "^18.1.1",
+    "@angular/platform-browser-dynamic": "^18.1.1",
+    "@angular/platform-server": "^18.1.1",
+    "@angular/router": "^18.1.1",
+    "@angular/ssr": "^18.1.1",
+    "@ngrx/operators": "^18.0.1",
+    "@ngrx/signals": "^18.0.0-rc.2",
     "bootstrap": "^5.3.3",
     "chart.js": "3.3.2",
     "lodash": "^4.17.21",
@@ -31,18 +30,18 @@
     "luxon": "^3.4.4",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primeng": "^17.18.0",
-    "quill": "^1.3.7",
+    "primeng": "^17.18.5",
+    "quill": "^2.0.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.6",
+    "zone.js": "~0.14.7",
     "angular-oidc-client": "^1.0.9",
-    "@microsoft/signalr": "^8.0.0"
+    "@microsoft/signalr": "^8.0.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.2",
-    "@angular/cli": "^18.0.2",
-    "@angular/compiler-cli": "^18.0.1",
+    "@angular-devkit/build-angular": "^18.1.1",
+    "@angular/cli": "^18.1.1",
+    "@angular/compiler-cli": "^18.1.1",
     "@types/jasmine": "~5.1.0",
     "@types/lodash": "^4.14.202",
     "@types/node": "^18.18.0",
@@ -52,6 +51,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.5"
+    "typescript": "~5.5.3"
   }
 }
