--- a/angular.json
+++ b/angular.json
@@ -16,7 +16,7 @@
           "skipTests": true,
           "standalone": true,
           "flat": true,
-          "path": "src/app/shared/components",
+          "path": "src/app",
           "inlineStyle": true,
           "inlineTemplate": true,
           "changeDetection": "Default"
