--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "^18.1.1",
     "@angular/ssr": "^18.1.1",
     "@ngrx/operators": "^18.0.1",
-    "@ngrx/signals": "^18.0.0-rc.2",
+    "@ngrx/signals": "^18.0.0",
     "bootstrap": "^5.3.3",
     "chart.js": "3.3.2",
     "lodash": "^4.17.21",
@@ -30,7 +30,7 @@
     "luxon": "^3.4.4",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primeng": "^17.18.5",
+    "primeng": "^17.18.6",
     "quill": "^2.0.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
