fix : todo check not consistent with UI render

--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
           "inlineStyle": true,
           "inlineTemplate": true,
           "changeDetection": "Default",
-          "displayBlock": true
+          "displayBlock": false
 
         }
       },
